--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -25,8 +25,12 @@ body {
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    font-size: 10.5em;
+    font-size: 4.5em;
     font-weight: 700;
+    color: #fff;
+}
+
+.text-vertical-center h2 {
     color: #fff;
 }
 
@@ -208,7 +212,7 @@ hr.small {
 }
 
 .img-portfolio:hover {
-    opacity: 0.8;
+    opacity: 0.5;
 }
 
 /* Call to Action */
