--- a/css/stylish-portfolio-lab16.css
+++ b/css/stylish-portfolio-lab16.css
@@ -160,7 +160,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg_Logo.png) no-repeat center center scroll;
+    background: url(../img/bgL.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -176,7 +176,7 @@ hr.small {
 /* Services */
 
 .services {
-    padding: 300px 0;
+    padding: 50px 0;
 }
 
 .service-item {
@@ -256,30 +256,23 @@ footer {
 
 .bg-primary {
   color: #fff;
-  background-color: #EE2737;
+  background-color: #363644;
 }
 
 .fa-cloud-download  {
-	color: #EE2737;
+	color: #363644;
 }
 
 .fa-calendar  {
-	color: #EE2737;
+	color: #363644;
 }
 
 .fa-book  {
-	color: #EE2737;
+	color: #363644;
 }
 
 .fa-edit  {
-	color: #EE2737;
+	color: #363644;
 }
 
 
-.center-screen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
-}
